--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -8,9 +8,9 @@ server {
 
   root /home/deploy/teacup/current/public;
   access_log /home/deploy/teacup/current/log/nginx.access.log;
-  error_log /home/deploy/teacup/current/log/nginx.error.log info;  
+  error_log /home/deploy/teacup/current/log/nginx.error.log info;
   auth_basic "Restricted Content";
-  auth_basic_user_file /etc/nginx/.htpasswd;  
+  auth_basic_user_file /etc/nginx/.htpasswd;
   location ^~ /assets/ {
     gzip_static on;
     expires max;
@@ -30,4 +30,12 @@ server {
   error_page 500 502 503 504 /500.html;
   client_max_body_size 10M;
   keepalive_timeout 10;
+
+  listen 443 ssl;
+  ssl_certificate /etc/letsencrypt/live/hocrubyonrails.com/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/hocrubyonrails.com/privkey.pem;
+  include /etc/letsencrypt/options-ssl-nginx.conf;
+  if ($scheme != "https") {
+      return 301 https://$host$request_uri;
+  }
 }
