--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -5,6 +5,7 @@ upstream puma {
 server {
   listen 80 default_server deferred;
   server_name hocrubyonrails.com;
+  return 301 https://www.$server_name$request_uri;
 
   root /home/deploy/teacup/current/public;
   access_log /home/deploy/teacup/current/log/nginx.access.log;
