update server name

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -4,7 +4,7 @@ upstream puma {
 
 server {
   listen 80 default_server deferred;
-  server_name hocrubyonrails.com;  
+  server_name hocrubyonrails.com www.hocrubyonrails.com;  
 
   root /home/deploy/teacup/current/public;
   access_log /home/deploy/teacup/current/log/nginx.access.log;
