--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,7 @@
 
 .byebug_history
 .env
+config/settings.local.yml
+config/settings/*.local.yml
+config/environments/*.local.yml
+/public/speeches
